// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renders in playground 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <TextIcon
      code="z"
      orbit={true}
    />
  }
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with max date 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <TextIcon
      code="z"
      orbit={true}
    />
  }
  maxDate={2018-01-01T00:00:00.000Z}
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with min date 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <TextIcon
      code="z"
      orbit={true}
    />
  }
  minDate={2018-01-01T00:00:00.000Z}
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with other date formats 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  format="L"
  iconComponent={
    <TextIcon
      code="z"
      orbit={true}
    />
  }
  onDateChange={[Function]}
/>
`;
